--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,10 @@
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "pip install -r requirements.txt",
 	
+	"forwardPorts": [
+		3000,
+		8000
+	],
 	"remote.extensionKind": {
 		"msjsdiag.debugger-for-chrome": "workspace",
 		"ms-azuretools.vscode-docker": "ui"
@@ -32,5 +36,7 @@
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"extensions": [
 		"ms-python.python"
-	]
+	],
+	"postCreateCommand": "python manage.py migrate && cd frontend && npm install",
+	"postStartCommand": "python manage.py runserver 0.0.0.0:8000 &",
 }
